@@ -18,7 +18,7 @@
 #
 [Global]
 Description=Architects Workbench
-CSN=CSN-awb-424
+CSN=CSN-awb-425
 Name=awb
 Tag=HEAD
 Lock=asim-asimcore
